<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rubin.mathsquares.MathSquares" >

    <fragment
        android:id="@+id/game_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="com.rubin.mathsquares.GameGridFragment" 
        android:layout_centerHorizontal="true"/>

    <fragment
        android:id="@+id/answer_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_grid"
        android:layout_marginTop="13dp"
        android:layout_centerHorizontal="true"
        class="com.rubin.mathsquares.AnswerGridFragment" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit"
        android:layout_marginTop="13dp"
        android:text="@string/timer"
        android:layout_centerInParent="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/answer_grid"
        android:layout_below="@+id/answer_grid"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="22dp"
        android:text="@string/submit" />

    <Button
        android:id="@+id/switchToGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/submit"
        android:layout_alignBottom="@+id/submit"
        android:layout_alignLeft="@+id/timer"
        android:layout_marginLeft="22dp"
        android:text="@string/switch_to_game" />

</RelativeLayout>
